--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
+wheel==0.35.1
 args==0.1.0
 clint==0.5.1
 crcmod==1.7
 mutagen==1.42.0
 pkg-resources==0.0.0
-PyYAML==5.1
+PyYAML==5.3.1
 r128gain==0.9.3
 tqdm==4.31.1
