--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-wheel==0.35.1
 args==0.1.0
 clint==0.5.1
 crcmod==1.7
-mutagen==1.42.0
+ffmpeg-python==0.2.0
+future==0.18.3
+mutagen==1.46.0
 PyYAML==5.4
-r128gain==0.9.3
+r128gain==1.0.7
 tqdm==4.31.1
